--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
     "date-fns": "^4.1.0",
+    "firebase": "^12.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.7.1",
+    "sweetalert2": "^11.26.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
